Images Replaced for SVG

--- a/index.html
+++ b/index.html
@@ -182,21 +182,21 @@
             <div class="carousel-item active" id="campus-connect">
               <img
                 class="d-block carousel-image-custom"
-                src="images/campus-connect.jpeg"
+                src="images/campus-connect.svg"
                 alt="First slide"
               />
             </div>
             <div class="carousel-item" id="shop-smart">
               <img
                 class="d-block carousel-image-custom"
-                src="images/shop-smart.jpeg"
+                src="images/shop-smart.svg"
                 alt="Second slide"
               />
             </div>
             <div class="carousel-item" id="track-it">
               <img
                 class="d-block carousel-image-custom"
-                src="images/track-it.jpeg"
+                src="images/track-it.svg"
                 alt="Third slide"
               />
             </div>
