Small fix and clean up

--- a/index.html
+++ b/index.html
@@ -557,6 +557,7 @@
                     class="form-control"
                     id="exampleFormControlTextarea1"
                     rows="3"
+                    required
                   ></textarea>
                 </div>
 
