--- a/index.html
+++ b/index.html
@@ -576,16 +576,28 @@
     <footer class="p-5 text-center fw-bold">
       <p class="color-green">&copy; 2025 António Costa. All Rights Reserved.</p>
       <div class="socials d-flex gap-3 py-4 justify-content-center">
-        <a href="https://linkedin.com/" target="_blank" aria-label="LinkedIn">
+        <a
+          href="https://linkedin.com/antoniocosta"
+          target="_blank"
+          aria-label="LinkedIn"
+        >
           <i class="bi bi-linkedin"></i>
         </a>
-        <a href="https://github.com/" target="_blank" aria-label="GitHub">
+        <a
+          href="https://github.com/antoniocosta"
+          target="_blank"
+          aria-label="GitHub"
+        >
           <i class="bi bi-github"></i>
         </a>
-        <a href="https://facebook.com/" target="_blank" aria-label="Facebook">
+        <a
+          href="https://facebook.com/antoniocosta"
+          target="_blank"
+          aria-label="Facebook"
+        >
           <i class="bi bi-facebook"></i>
         </a>
-        <a href="https://x.com/" target="_blank" aria-label="X">
+        <a href="https://x.com/antoniocosta" target="_blank" aria-label="X">
           <i class="bi bi-twitter-x"></i>
         </a>
       </div>
